plugins {
    id 'com.gradle.plugin-publish' version '2.1.1'
    id 'org.hivevm.cc' version '1.0.11'
    id 'java-gradle-plugin'
    id 'maven-publish'
}


// Apply the java-library plugin to add support for Java Library
apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'java-gradle-plugin'


repositories {
    mavenLocal()
    mavenCentral()
}


version = '1.0.11'
group	= 'org.hivevm'


java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


allprojects {
    tasks.withType(Javadoc).all {
        enabled = false
    }
}


dependencies {
    implementation gradleApi()

    // https://mvnrepository.com/artifact/org.jspecify/jspecify
    implementation("org.jspecify:jspecify:1.0.0")

    // Use JUnit test framework//
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter
    testImplementation("org.junit.jupiter:junit-jupiter:6.0.3")
    // https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
    testImplementation("org.junit.platform:junit-platform-launcher:6.0.3")
}


sourceSets {
    main {
        java {
            srcDirs += 'src/main/gradle'
            srcDirs += 'src/main/generated'
        }
        resources {
        }
    }
/*
  test {
    java {
      compileClasspath += configurations.compileOnly
      runtimeClasspath += configurations.compileOnly
    }
  }
 */
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Implementation-Title': 'HiveVM Compiler Compiler'
        attributes 'Implementation-Version': project.version
    }

    exclude('JavaCC.jj')
    exclude('JJTree.jjt')
}


// Configured to publish your plugin to the plugin portal
gradlePlugin {
  website = 'https://www.hivevm.org'
  vcsUrl  = 'https://github.com/hivevm/cc.git'
  plugins {
    create("gradle") {
      id = 'org.hivevm.cc'
            displayName = 'HiveVM CC'
            description = 'HiveVM parser generator for Java/C++/Rust'
            implementationClass = 'org.hivevm.gradle.HiveCCPlugin'
            tags.set(["hivevm", "compiler-compiler", "parser generator"])
        }
    }
}


parserProject {
  target       = 'java'
  output       = 'src/main/generated'

  task {
    name       = 'tree'
    file       = 'src/main/resources/JJTree.jj'
    treeNodes  = [ 'BNF', 'NodeDescriptor' ]
  }

  task {
    name       = 'parser'
    file       = 'src/main/resources/JavaCC.jj'
  }

  // task {
    //   name       = 'oql4java'
    //   output     = '/data/smartIO/develop/parser/parser/src/main/java'
    //   file       = '/data/smartIO/develop/parser/parser/src/main/resources/it/smartio/text/parser/OQL.jjt'
    // }

    // task {
    //   name       = 'oql4cpp'
    //   target     = 'cpp'
    //   output     = '/data/smartIO/develop/core-cpp/text/parser'
    //   file       = '/data/smartIO/develop/parser/parser/src/main/resources/it/smartio/text/parser/OQL-Cpp.jjt'
    // }
}
